    (Mayank Lahiri via jvs)

    HIVE-1408. add option to let hive automatically run in local mode based on
    tunable heuristics
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1126. Missiong some Jdbc functionality like getTables
    getColumns and HiveResultSet.get* methods based on column name.
    (Bennie Schut via jvs)

    HIVE-417. Implement Indexing in Hive
    (He Yongqiang via jvs)

  IMPROVEMENTS

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

    HIVE-1447. Speed up reflection method calls (Zheng via He Yongqiang)

    HIVE-1462. Report progress in FileSinkOperator works in multiple directory
    case
    (Siying Dong via Ning Zhang)

    HIVE-1469. replace isArray() calls and remove LOG.isInfoEnabled() in
    Operator.forward()
    (Yongqiang He via Ning Zhang)

    HIVE-1463. Hive output file names are unnecessarily large
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1229. Replace dependencies on HBase deprecated API.
    (Basab Maulik via jvs)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1471. CTAS should unescape column names in select-clause
    (Ning Zhang via jssarma)

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

    HIVE-1454. insert overwrite and CTAS fail in hive local mode
    (Joydeep Sen Sarma via He Yongqiang )

    HIVE-1305. add progress in join and groupby
    (Siying Dong via He Yongqiang)

    HIVE-1453. Make Eclipse launch tempaltes auto-adjust to Hive
    version number changes.
    (Arvind Prabhakar via jvs)

    HIVE-1056. Predicate push down does not work with UDTF's
    (Paul Yang via He Yongqiang)

    HIVE-1428. ALTER TABLE ADD PARTITION failes with a remote Thrift
    metastore
    (Pradeep Kamath via jvs)
