@@ -30,6 +30,9 @@ Trunk -  Unreleased
     HIVE-417. Implement Indexing in Hive
     (He Yongqiang via jvs)
 
+    HIVE-1414. Automatically invoke .hiverc init script
+    (Edward Capriolo via jvs)
+
   IMPROVEMENTS
 
     HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
@@ -108,8 +111,8 @@ Trunk -  Unreleased
     collect_set udaf
     (He Yongqiang via jvs)
 
-    HIVE-1422 (2nd trial). skip counter update when RunningJob.getCounters() 
-    returns null 
+    HIVE-1422 (2nd trial). skip counter update when RunningJob.getCounters()
+    returns null
     (Joydeep Sen Sarma via Ning Zhang)
 
 
